<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_pacepilot"
    id="pacepilot"
    scansDevices="false">

    <BonusAction
        actionId="mode_workout"
        displayName="@string/action_mode_workout" />
    <BonusAction
        actionId="mode_endurance"
        displayName="@string/action_mode_endurance" />
    <BonusAction
        actionId="mode_climb"
        displayName="@string/action_mode_climb" />
    <BonusAction
        actionId="mode_adaptive"
        displayName="@string/action_mode_adaptive" />
    <BonusAction
        actionId="ack_eat"
        displayName="@string/action_ack_eat" />
    <BonusAction
        actionId="ack_drink"
        displayName="@string/action_ack_drink" />
    <BonusAction
        actionId="silence_10min"
        displayName="@string/action_silence" />

</ExtensionInfo>
